
syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "QiwiProto";


package protobuf;

service Qiwi {
  rpc AddAccount (AddAccountRequest) returns (AddAccountResponse) {}
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse) {}
  rpc GetAccountBalances (GetAccountBalancesRequest) returns (GetAccountBalancesResponse) {}
  rpc SendMoneyToQiwi (SendMoneyToQiwiRequest) returns (SendMoneyToQiwiResponse) {}
}


message AddAccountRequest {
  string token = 1;
}

message AddAccountResponse {
  string contractID = 1;
}

message ListAccountsRequest {}

message ListAccountsResponse {
  repeated string contractIDs = 1;
}

message GetAccountBalancesRequest {
  string contractID = 1;
}
message GetAccountBalancesResponse {
  map<string, double> balances = 1;
}

message SendMoneyToQiwiRequest {
  string senderContractID = 1;
  string receiverContractID = 2; //todo
  string currency = 3;
  double amount = 4;
}
message SendMoneyToQiwiResponse {
  string status = 1;
}
